syntax = "proto3";

package inventory;

option java_multiple_files = true;
option java_package = "org.dmiit3iy.ordermicroservice.grpc.inventory";
option java_outer_classname = "InventoryProto";

// Запрос по ID продукта
message ProductRequest {
  int64 productId = 1;
}

// Запрос по имени продукта
message ProductByNameRequest {
  string name = 1;
}

// Запрос на уменьшение количества по имени
message ReduceQuantityByNameRequest {
  string name = 1;
  int32 quantity = 2;
}

// Ответ с данными продукта
message ProductResponse {
  int64 id = 1;
  string name = 2;
  int32 quantity = 3;
  string price = 4;
  string sale = 5;
}

// Сервис Inventory
service InventoryService {
  rpc checkAvailability(ProductRequest) returns (ProductResponse);
  rpc checkAvailabilityByName(ProductByNameRequest) returns (ProductResponse);
  rpc reduceQuantityByName(ReduceQuantityByNameRequest) returns (ProductResponse);
}

